- Fix wrong content-type in response {pull}171[171].
- Remove duplicate dashboard entries {pull}162[162].
- Remove `context.db` from `fields.yml` for consistency, has not been indexed before {pull}159[159].
- Updated systemd doc url {pull}354[354]
- Update dashboard with fix for rpm graphs {pull}315[315].
- Dashboards: Remove time from url_templates {pull}321[321].

==== Added
- Added wildcard matching for allowed origins for frontend {pull}287[287].
- Added rate limit per IP for frontend {pull}257[257].
- Allow null for all optional fields {pull}253[253].
- Make context.app.language.version optional {pull}246[246].
- CORS support for frontend {pull}244[244].
- Added support for frontend {pull}227[227].
- Show transaction.result in Requests per Minute {pull}226[226].
- Added Kibana 5.6 compatible dashboards {pull}208[208].
- Send document to output on start of server {pull}117[117].
- Log frontend status at startup  {pull}284[284].

==== Deprecated

==== Known Issues


=== APM Server version 0.2.0
https://github.com/elastic/apm-server/compare/3ad33b3129c0be3b0e4057efc53948c381a2af79\...f9a2086ceed0b918e1a0b3d8ddc140fc21af0e74[View commits]

==== Breaking changes
- Changed response status code in the API from 201 to 202 {pull}34[34]
- Set dynamic mapping to false, enable only for `context.tags`. Fix issues with indexing. Removed from index: `request.headers_sent`, `app.argv`. Changes take place with {pull}43[43], after updating beats framework.
- Remove `context.db.sql` and add `context.db.instance`, `context.db.statement`, `context.db.type` and `context.db.user` instead {pull}38[38].
- Changed `context.response.status` object to simply storing `context.response.status_code` as a number {pull}49[49].
- Changed `error.checksum` to `error.grouping_field` {pull}83[83].
- Removed `server` namespace within `apm-server` in `apm-server.yml`. `server` properties are lifted up one level {pull}78[78].
- Changed default APM Server listen port from 8080 to 8200 {pull}91[91].