@@ -20,8 +20,7 @@ update-beats:
 	rm -rf vendor/github.com/elastic/beats
 	@govendor fetch github.com/elastic/beats/...@$(BEATS_VERSION)
 	@govendor fetch github.com/elastic/beats/libbeat/kibana/@$(BEATS_VERSION)
-	rm -rf _beats
-	@BEATS_VERSION=$(BEATS_VERSION) sh script/update_beats.sh
+	@BEATS_VERSION=$(BEATS_VERSION) script/update_beats.sh
 	@$(MAKE) update
 	echo --- Use this commit message: Update beats framework to `cd vendor/github.com/elastic/beats/ && git rev-parse --short HEAD`
 
