@@ -22,6 +22,7 @@ https://github.com/elastic/apm-server/compare/f9a2086ceed0b918e1a0b3d8ddc140fc21
 - Updated systemd doc url {pull}354[354]
 - Update dashboard with fix for rpm graphs {pull}315[315].
 - Dashboards: Remove time from url_templates {pull}321[321].
+- Updated readme doc urls {pull}356[356]
 
 ==== Added
 - Added wildcard matching for allowed origins for frontend {pull}287[287].
